<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnObject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_object_detection"
        app:layout_constraintBottom_toTopOf="@id/btnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_text_detection"
        app:layout_constraintBottom_toTopOf="@id/btnPose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnObject" />

    <Button
        android:id="@+id/btnPose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_pose_detection"
        app:layout_constraintBottom_toTopOf="@id/btnFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnText" />

    <Button
        android:id="@+id/btnFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_fragment_sample"
        app:layout_constraintBottom_toTopOf="@id/btnView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPose" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_view_sample"
        app:layout_constraintBottom_toTopOf="@id/btnTensorflow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFragment" />

    <Button
        android:id="@+id/btnTensorflow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_tensorflow_sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnView" />

</androidx.constraintlayout.widget.ConstraintLayout>
